added scrollto plugin

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                     <div class="swiper-button-next"></div>
                 </div>
                 <div class="btn-wrap">
-                    <a href="#" class="btn">Shop Now</a>
-                    <a href="#" class="btn btn-link">Learn More<svg width="30" height="51" viewBox="0 0 30 51"
+                    <a href="https://www.amazon.com/" target="_blank" class="btn">Shop Now</a>
+                    <a id="scrolltobooks" class="btn btn-link">Learn More<svg width="30" height="51" viewBox="0 0 30 51"
                             fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M3 3L27 24.5L3 48.5" stroke="#FFF2D9" stroke-width="3" stroke-linecap="square" />
                         </svg></a>
@@ -162,7 +162,7 @@
             </div>
         </section>
 
-        <section class="books-scroll">
+        <section class="books-scroll" id="books">
             <div class="container">
                 <section class="cards" role="feed">
                     <article class="card">
@@ -342,6 +342,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollToPlugin.min.js"></script>
 </body>
 
 </html>
