fixed glitch with newsletter modal showing up

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </main>
     <!-- Main End -->
 
-    <!-- <div class="modal-outer" id="modal">
+    <div class="modal-outer" id="modal">
         <div class="modal-inner">
             <h5>Join My Newsletter!</h5>
             <p>For all the latest updated and news, never spam!</p>
@@ -306,7 +306,7 @@
                 <button type="submit" class="btn">Send Free Updates</button>
             </form>
         </div>
-    </div> -->
+    </div>
 
     <footer class="footer">
         <div class="container">
